<resources>
    <string name="app_name">tic tac toe</string>
    <string name="play_with_friends">Play with friends</string>
    <string name="start_game">Start Game</string>
    <string name="pick_your_side">Pick your side</string>

    <string name="x_symbol">x symbol</string>
    <string name="choose_game">Choose Game</string>
    <string name="single_player_icon">Single Player Icon</string>
    <string name="multiplayer_icon">Multiplayer Icon</string>
    <string name="multiplayer">MULTI PLAYER</string>
    <string name="seeting_icon">seeting icon</string>
    <string name="setting">SETTING</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="feedback">Feedback</string>
    <string name="are_you_want_to_quit">Are you want to quit !</string>
    <string name="cancel">Cancel</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="logout">Logout</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="player_one_name">Player One Name</string>
    <string name="enter_your_nick_name">Enter Your Nick Name</string>
    <string name="player_two_name">Player Two Name</string>
    <string name="next">Next</string>
    <string name="clear">Clear</string>
    <string name="create_an_account">Create an Account</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="match_draw">Match Draw!</string>
    <string name="quit">Quit</string>
    <string name="con">Continue</string>
    <string name="con2">Continue</string>
    <string name="congratulations">Congratulations!</string>
    <string name="player_name">Player Name</string>
    <string name="computer">Computer</string>
    <string name="click">Click</string>
    <string name="music">Music</string>
    <string name="choose_language">Choose Language</string>
    <string name="player_name_cannot_be_empty">Player name cannot be empty</string>
    <string name="comp">Computer</string>
    <string name="wins">" Wins!"</string>
    <string name="computer_wins">Computer Wins!</string>
    <string name="player_wins">Player Wins!</string>
    <string name="player_one_name_cannot_be_empty">Player One name cannot be empty</string>
    <string name="player_two_name_cannot_be_empty">Player Two name cannot be empty</string>
    <string name="sign_up_successful">Sign-up successful</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="username_is_required">Username is required</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="login_successful">Login successful</string>
    <string name="password_is_required">password is required</string>
    <string name="welcome">"Welcome , "</string>


    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
        <item>German</item>
        <item>French</item>
        <item>Spanish</item>
    </string-array>


</resources>