<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            app:srcCompat="@drawable/splash_src" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/enter_your_username"
            android:textColorHint="@color/white"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/enter_your_email"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/text_color"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:cornerRadius="8dp" />

        <TextView
            android:id="@+id/login_redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
