<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_color">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"


        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />

        <ImageView
            android:id="@+id/menu_back_icon"
            android:layout_width="0dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8.5" />
    </LinearLayout>

    <!-- Title TextView -->
    <TextView
        android:id="@+id/chooseGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_game"
        android:fontFamily="@font/poppins"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp"/>

    <!-- Title Underline -->
    <View
        android:id="@+id/titleUnderline"
        android:layout_width="60dp"
        android:layout_height="3dp"
        android:background="@android:color/holo_red_dark"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <!-- Grid Layout for Cards -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_gravity="center"
        android:padding="8dp">

        <!-- Single Player Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            app:cardCornerRadius="35dp"
            android:backgroundTint="@android:color/holo_red_light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="17dp"
                    android:src="@drawable/ic_single_player"
                    android:contentDescription="@string/single_player_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SINGLE PLAYER"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:paddingTop="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Multiplayer Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            android:cardElevation="8dp"
            app:cardCornerRadius="35dp"
            android:backgroundTint="@android:color/holo_blue_light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/multiico"
                    android:contentDescription="@string/multiplayer_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplayer"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:paddingTop="16dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>
    <!-- Centered Setting Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:cardElevation="12dp"
        app:cardCornerRadius="35dp"
        android:backgroundTint="@color/orange">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@drawable/set"
                android:contentDescription="@string/seeting_icon" />

            <View
                android:id="@+id/settingUnderline"
                android:layout_width="126dp"
                android:layout_height="2dp"
                android:background="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="22sp"
                android:paddingTop="16dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
