<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="3dp"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"

        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <!-- Title Section -->
            <TextView
                android:id="@+id/win_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_draw"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingBottom="16dp"/>

            <!-- Button Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/offline_game_draw_quit_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quit"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/button_red"
                    android:layout_marginEnd="8dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/offline_game_draw_continue_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/con2"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/button_blue"
                    android:layout_marginStart="8dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
