<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"

    android:orientation="vertical">

     <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
         android:layout_margin="25dp"


         app:cardElevation="8dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:background="@color/white"

            android:layout_width="match_parent"
         android:layout_height="match_parent"
            android:padding="10dp"
         android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/are_you_want_to_quit"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="#2C2C2C"
                    android:textStyle="bold"
                    android:textAllCaps="false" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/quit_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/quit"
                        android:textSize="18dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:layout_gravity="center"

                        android:background="@drawable/button_blue">

                    </androidx.appcompat.widget.AppCompatButton>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/continue_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/cancel"
                        android:textSize="18dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/button_red" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5" />
                </LinearLayout>

            </LinearLayout>

         </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>