<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/background_color">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"


        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5" />


        <ImageView
            android:id="@+id/choose_player_back_icon"
            android:layout_width="0dp"

            android:padding="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/back" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8.5" />
    </LinearLayout>


    <ImageView
        android:layout_width="300dp"
       android:layout_gravity="center"
        android:layout_height="90dp"
        android:layout_weight="2"
        android:background="@drawable/xo" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"></View>

    <LinearLayout
        android:id="@+id/ai_player_name_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="10"
        android:orientation="vertical"
        android:layout_weight="5.5">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:textSize="25dp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:textColor="@color/white"

            android:text="@string/player_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <EditText
            android:id="@+id/ai_player_name_edttxt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:maxLines="1"
            android:maxLength="10"
            android:backgroundTint="@color/teal_200"
            android:hint="@string/enter_your_nick_name"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#6E6E6E"
            android:textSize="18dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1.5" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.9"></View>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ai_player_name_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/button_1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/next"
            android:layout_marginRight="95dp"
            android:layout_marginLeft="95dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"></View>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"></View>

</LinearLayout>